# ml-rs

./: .gitignore  Cargo.toml  LICENCE  README.md
.cargo/: config
.github/workflows/: rust.yml
benches/: bench_logistic_regression.rs  bench_pca.rs
docs/: search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/ml_rs/: all.html  enum.Error.html  index.html  sidebar-items.js
docs/ml_rs/classification/: fn.labels_binary.html  index.html  sidebar-items.js  struct.MajorityClassifier.html  struct.TrivialClassifier.html  trait.Classifier.html  trait.ProbabilityBinaryClassifier.html
docs/ml_rs/metrics/: fn.accuracy_score.html  index.html  sidebar-items.js
docs/ml_rs/preprocessing/: index.html  sidebar-items.js  struct.CsvReader.html
docs/ml_rs/regression/: index.html  sidebar-items.js  trait.Regressor.html
docs/ml_rs/transformation/: index.html  sidebar-items.js  trait.Transformer.html
docs/src/ml_rs/: lib.rs.html
examples/: logistic_regression.rs  logistic_regression_csv.rs  logistic_regression_dataset.rs  test.csv
src/: docs-header.html  lib.rs
src/classification/: linear.rs  mod.rs
src/datasets/: breast-cancer-wisconsin.csv  mod.rs
src/metrics/: binary.rs  mod.rs
src/preprocessing/: mod.rs
src/regression/: linear.rs  mod.rs
src/solvers/: mod.rs
src/transformation/: mod.rs  pca.rs
(+29 files in other folders)
