[package]
name = "ml-rs"
version = "0.1.0"
authors = ["htlambley <71826713+htlambley@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
ndarray-linalg = "0.12"
argmin = { version = "0.3.1", features = ["ndarrayl"] }
ndarray-rand = "0.11.0"
ndarray-csv = "0.4.1"
csv = "1"
serde = "1"

[dev-dependencies]
openblas-src = { version = "0.7", features = ["system"] }